tests/rosetta/transpiler/Elixir/abbreviations-easy.error
run: exit status 1
    warning: variable "seed" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 14 │               seed = v
    │               ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:14:15: Main._now/0

    warning: variable "seeded" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 15 │               seeded = true
    │               ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:15:15: Main._now/0

    warning: variable "cur" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 42 │             cur = (cur <> ch)
    │             ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:42:13: Main.fields/1

    warning: variable "cur" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 39 │               cur = ""
    │               ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:39:15: Main.fields/1

    warning: variable "words" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 38 │               words = (words ++ [cur])
    │               ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:38:15: Main.fields/1

    warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 50 │       {cur, i, words} = try do
    │             ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:50:13: Main.fields/1

    warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 80 │       {i, out} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:80:8: Main.padRight/2

    warning: variable "res" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 98 │             res = (res <> sep)
    │             ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:98:13: Main.join/2

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 107 │       {i, res} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:107:8: Main.join/2

     warning: variable "found" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 141 │                       found = true
     │                       ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:141:23: Main.validate/3

     warning: variable "results" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 140 │                       results = (results ++ [c])
     │                       ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:140:23: Main.validate/3

     warning: variable "ci" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 145 │                   ci = ci + 1
     │                   ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:145:19: Main.validate/3

     warning: variable "results" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 161 │               results = (results ++ ["*error*"])
     │               ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:161:15: Main.validate/3

     warning: variable "ci" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 154 │             {ci, found, results} = try do
     │              ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:154:14: Main.validate/3

     warning: variable "wi" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 163 │             wi = wi + 1
     │             ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:163:13: Main.validate/3

     warning: variable "wi" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 172 │       {results, wi} = try do
     │                 ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:172:17: Main.validate/3

     warning: variable "count" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 198 │                 count = count + 1
     │                 ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:198:17: Main.main/0

     warning: variable "j" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 206 │           {count, j} = try do
     │                   ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:206:19: Main.main/0

     error: undefined variable "count"
     │
 220 │           while_fun_6.(while_fun_6, count, i, mins)
     │                                     ^^^^^
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:220:37: Main.main/0

     error: undefined variable "count"
     │
 222 │           :break -> {count, i, mins}
     │                      ^^^^^
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:222:22: Main.main/0

     warning: variable "count" is unused (if the variable is not meant to be used, prefix it with an underscore)
     │
 219 │       {count, i, mins} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:219:8: Main.main/0

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 219 │       {count, i, mins} = try do
     │               ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:219:15: Main.main/0

     warning: variable "k" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 239 │       {k, out1} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs:239:8: Main.main/0

** (CompileError) /workspace/mochi/tests/rosetta/transpiler/Elixir/abbreviations-easy.exs: cannot compile module Main (errors have been logged)

