tests/rosetta/transpiler/Elixir/abbreviations-easy.exs
# Code generated by Mochi transpiler 2025-07-25 00:31 +0700
defmodule Main do
  defp _now() do
    seeded = Process.get(:_now_seeded, false)
    seed = Process.get(:_now_seed, 0)
    if !seeded do
      case System.get_env("MOCHI_NOW_SEED") do
        nil -> :ok
        s ->
          case Integer.parse(s) do
            {v, ""} ->
              Process.put(:_now_seed, v)
              Process.put(:_now_seeded, true)
              seed = v
              seeded = true
            _ -> :ok
          end
      end
    end
    if seeded do
      seed = rem(seed * 1664525 + 1013904223, 2147483647)
      Process.put(:_now_seed, seed)
      seed
    else
      System.os_time(:nanosecond)
    end
  end
  def fields(s) do
    try do
      words = []
      cur = ""
      i = 0
      while_fun = fn while_fun, cur, i, words ->
        if i < (if is_list(s), do: length(s), else: String.length(s)) do
          ch = String.slice(s, i, i + 1 - (i))
          if ch == " " || ch == "\n" || ch == "\t" do
            if (if is_list(cur), do: length(cur), else: String.length(cur)) > 0 do
              words = (words ++ [cur])
              cur = ""
            end
          else
            cur = (cur <> ch)
          end
          i = i + 1
          while_fun.(while_fun, cur, i, words)
        else
          {cur, i, words}
        end
      end
      {cur, i, words} = try do
          while_fun.(while_fun, cur, i, words)
        catch
          :break -> {cur, i, words}
        end

      {words} = if (if is_list(cur), do: length(cur), else: String.length(cur)) > 0 do
        words = (words ++ [cur])
        {words}
      else
        {words}
      end
      throw {:return, words}
    catch
      {:return, val} -> val
    end
  end
  def padRight(s, width) do
    try do
      out = s
      i = (if is_list(s), do: length(s), else: String.length(s))
      while_fun_2 = fn while_fun_2, i, out ->
        if i < width do
          out = (out <> " ")
          i = i + 1
          while_fun_2.(while_fun_2, i, out)
        else
          {i, out}
        end
      end
      {i, out} = try do
          while_fun_2.(while_fun_2, i, out)
        catch
          :break -> {i, out}
        end

      throw {:return, out}
    catch
      {:return, val} -> val
    end
  end
  def join(xs, sep) do
    try do
      res = ""
      i = 0
      while_fun_3 = fn while_fun_3, i, res ->
        if i < length(xs) do
          if i > 0 do
            res = (res <> sep)
          end
          res = (res <> Enum.at(xs, i))
          i = i + 1
          while_fun_3.(while_fun_3, i, res)
        else
          {i, res}
        end
      end
      {i, res} = try do
          while_fun_3.(while_fun_3, i, res)
        catch
          :break -> {i, res}
        end

      throw {:return, res}
    catch
      {:return, val} -> val
    end
  end
  def validate(commands, words, mins) do
    try do
      results = []
      if length(words) == 0 do
        throw {:return, results}
      end
      wi = 0
      while_fun_4 = fn while_fun_4, results, wi ->
        if wi < length(words) do
          try do
            w = Enum.at(words, wi)
            found = false
            wlen = (if is_list(w), do: length(w), else: String.length(w))
            ci = 0
            while_fun_5 = fn while_fun_5, ci, found, results ->
              if ci < length(commands) do
                try do
                  cmd = Enum.at(commands, ci)
                  if Enum.at(mins, ci) != 0 && wlen >= Enum.at(mins, ci) && wlen <= (if is_list(cmd), do: length(cmd), else: String.length(cmd)) do
                    c = String.upcase(cmd)
                    ww = String.upcase(w)
                    if String.slice(c, 0, wlen - (0)) == ww do
                      results = (results ++ [c])
                      found = true
                      throw :break
                    end
                  end
                  ci = ci + 1
                catch
                  :continue -> nil
                end
                while_fun_5.(while_fun_5, ci, found, results)
              else
                {ci, found, results}
              end
            end
            {ci, found, results} = try do
                while_fun_5.(while_fun_5, ci, found, results)
              catch
                :break -> {ci, found, results}
              end

            if !found do
              results = (results ++ ["*error*"])
            end
            wi = wi + 1
          catch
            :continue -> nil
          end
          while_fun_4.(while_fun_4, results, wi)
        else
          {results, wi}
        end
      end
      {results, wi} = try do
          while_fun_4.(while_fun_4, results, wi)
        catch
          :break -> {results, wi}
        end

      throw {:return, results}
    catch
      {:return, val} -> val
    end
  end
  def main() do
    try do
      table = (((((("Add ALTer  BAckup Bottom  CAppend Change SCHANGE  CInsert CLAst COMPress Copy " <> "COUnt COVerlay CURsor DELete CDelete Down DUPlicate Xedit EXPand EXTract Find ") <> "NFind NFINDUp NFUp CFind FINdup FUp FOrward GET Help HEXType Input POWerinput ") <> " Join SPlit SPLTJOIN  LOAD  Locate CLocate  LOWercase UPPercase  LPrefix MACRO ") <> "MErge MODify MOve MSG Next Overlay PARSE PREServe PURge PUT PUTD  Query  QUIT ") <> "READ  RECover REFRESH RENum REPeat  Replace CReplace  RESet  RESTore  RGTLEFT ") <> "RIght LEft  SAVE  SET SHift SI  SORT  SOS  STAck STATus  TOP TRAnsfer TypeUp ")
      commands = fields(table)
      mins = []
      i = 0
      while_fun_6 = fn while_fun_6, i, mins ->
        if i < (if is_list(commands), do: length(commands), else: String.length(commands)) do
          count = 0
          j = 0
          cmd = Enum.at(commands, i)
          while_fun_7 = fn while_fun_7, count, j ->
            if j < (if is_list(cmd), do: length(cmd), else: String.length(cmd)) do
              ch = String.slice(cmd, j, j + 1 - (j))
              if ch >= "A" && ch <= "Z" do
                count = count + 1
              end
              j = j + 1
              while_fun_7.(while_fun_7, count, j)
            else
              {count, j}
            end
          end
          {count, j} = try do
              while_fun_7.(while_fun_7, count, j)
            catch
              :break -> {count, j}
            end

          mins = (mins ++ [count])
          i = i + 1
          while_fun_6.(while_fun_6, i, mins)
        else
          {i, mins}
        end
      end
      {i, mins} = try do
          while_fun_6.(while_fun_6, i, mins)
        catch
          :break -> {i, mins}
        end

      sentence = "riG   rePEAT copies  put mo   rest    types   fup.    6       poweRin"
      words = fields(sentence)
      results = validate(commands, words, mins)
      out1 = "user words:  "
      k = 0
      while_fun_8 = fn while_fun_8, k, out1 ->
        if k < (if is_list(words), do: length(words), else: String.length(words)) do
          out1 = ((out1 <> padRight(Enum.at(words, k), (if is_list(Enum.at(results, k)), do: length(Enum.at(results, k)), else: String.length(Enum.at(results, k))))) <> " ")
          k = k + 1
          while_fun_8.(while_fun_8, k, out1)
        else
          {k, out1}
        end
      end
      {k, out1} = try do
          while_fun_8.(while_fun_8, k, out1)
        catch
          :break -> {k, out1}
        end

      IO.puts(out1)
      IO.puts(("full words:  " <> join(results, " ")))
    catch
      {:return, val} -> val
    end
  end
end
Main.main()
